--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,25 @@ html
     link(rel='stylesheet', href='/bootstrap-3.3.5-dist/css/bootstrap.css')
     link(rel='stylesheet', href='/bootstrap-3.3.5-dist/css/bootstrap-theme.css')
   body
+  .navbar.navbar-inverse.navbar-fixed-top
+         .container
+          .navbar-header
+            .button(class="navbar-toggle.collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
+              .span(class="sr-only") Toggle navigation
+              .span(class="icon-bar")
+              .span(class="icon-bar")
+              .span(class="icon-bar")
+
+          .a.navbar-brand(href="#") Wheeties
+          .ul.nav.navbar-nav.navbar-right
+              li
+                a(href="#") #{username}
+              li
+                a(href="/signin") Sign in
+              li
+                a(href="/register") Sign Up 
+               li
+                a(href="/signout") Sign Out
+                
+          .container-theme-showcase
     block content
